fix(awx.playbook.yml): fixing the awx playbook
latest version of docker-compose is not working properly version 1.9.0 is stable version

--- a/awx.playbook.yml
+++ b/awx.playbook.yml
@@ -38,8 +38,7 @@
 
   - name: Install Docker Compose
     pip:
-      name: docker-compose
-      state: latest
+      name: docker-compose==1.9.0
 
   - name: Install AWX
     command: /usr/local/bin/ansible-playbook -i {{ tmpdir }}/installer/inventory {{ tmpdir }}/installer/install.yml
